--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- SEO Meta Tags -->
+<meta name="description" content="Power         Mike - Providing excellent hospitality services to families, individuals, and corporate organizations.">
+<meta name="keywords" content="Travel, Tours, powermike, Corporate Travel, Family Travel, Travel Services">
+<meta name="author" content="Power Mike  Hotel">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph Meta Tags for Social Media -->
+<meta property="og:title" content="Asogworld Travel & Tours">
+<meta property="og:description" content="We are established to provide excellent hospitality services to prospective clients families, individuals, coporate organization.">
+<meta property="og:url" content="https://powermike.netlify.app/">
+<meta property="og:image" content="img/land/p1.jpg">
+<meta property="og:type" content="website">
+
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="powermike Hotel">
+<meta name="twitter:description" content="We are established to provide excellent hospitality services to prospective clients, families, individuals, and corporate organizations.">
+<meta name="twitter:image" content="https://powermike.netlify.app/">
+<meta name="twitter:site" content="@powermike">
+
+
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <meta name="google-adsense-account" content="ca-pub-4277537789895561">
+
+
+
+
+
   <title>Power Mike Hotels</title>
 
 	<link rel="icon" href="img/favicon.png" type="image/png">
