fest: added room images

--- a/about.html
+++ b/about.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- SEO Meta Tags -->
+<meta name="description" content="Power         Mike - Providing excellent hospitality services to families, individuals, and corporate organizations.">
+<meta name="keywords" content="Travel, Tours, powermike, Corporate Travel, Family Travel, Travel Services">
+<meta name="author" content="Power Mike  Hotel">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph Meta Tags for Social Media -->
+<meta property="og:title" content="Asogworld Travel & Tours">
+<meta property="og:description" content="We are established to provide excellent hospitality services to prospective clients families, individuals, coporate organization.">
+<meta property="og:url" content="https://powermike.netlify.app/">
+<meta property="og:image" content="img/land/p1.jpg">
+<meta property="og:type" content="website">
+
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="powermike Hotel">
+<meta name="twitter:description" content="We are established to provide excellent hospitality services to prospective clients, families, individuals, and corporate organizations.">
+<meta name="twitter:image" content="https://powermike.netlify.app/">
+<meta name="twitter:site" content="@powermike">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -69,7 +91,7 @@
           <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
             <ul class="nav navbar-nav menu_nav">
               <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#room">Room</a></li>
+              <li class="nav-item"><a class="nav-link" href="room.html">Room</a></li>
               <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
