--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Open Graph Meta Tags for Social Media -->
 <meta property="og:title" content="Asogworld Travel & Tours">
 <meta property="og:description" content="We are established to provide excellent hospitality services to prospective clients families, individuals, coporate organization.">
-<meta property="og:url" content="https://powermike.netlify.app/">
+<meta property="og:url" content="https://powermikehotel.com.ng/">
 <meta property="og:image" content="img/land/p1.jpg">
 <meta property="og:type" content="website">
 
@@ -19,7 +19,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="powermike Hotel">
 <meta name="twitter:description" content="We are established to provide excellent hospitality services to prospective clients, families, individuals, and corporate organizations.">
-<meta name="twitter:image" content="https://powermike.netlify.app/">
+<meta name="twitter:image" content="https://powermikehotel.com.ng/">
 <meta name="twitter:site" content="@powermike">
 
 
