Fest: testing an ad banner

--- a/index.html
+++ b/index.html
@@ -50,6 +50,39 @@
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4277537789895561"
      crossorigin="anonymous"></script>
+
+
+
+     <!--  -->
+     <style>
+      .banner {
+          background-image: url('your-hotel-image.jpg'); /* Replace with your image URL */
+          background-size: cover;
+          background-position: center;
+          height: 250px; /* Adjust based on desired banner height */
+          position: relative;
+          color: #fff;
+      }
+      .banner-content {
+          background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+          padding: 20px;
+          border-radius: 5px;
+          position: absolute;
+          bottom: 20px;
+          left: 20px;
+      }
+      .banner h1 {
+          font-size: 28px;
+          margin: 0;
+      }
+      .banner p {
+          font-size: 16px;
+          margin: 10px 0 0;
+      }
+      .banner a.btn {
+          margin-top: 15px;
+      }
+  </style>
 </head>
 <body>
 	<!-- ================ header section start ================= -->	
@@ -114,7 +147,8 @@
 	</header>
 	<!-- ================ header section end ================= -->	
     <main class="site-main">
-       
+
+
 
     <!-- ================ start banner area ================= --> 
     <section class="home-banner-area" id="home">
@@ -181,6 +215,17 @@
   </form>
   
       <!-- ================ end banner form ================= --> 
+
+      <!--       
+        -->
+        <div class="banner d-flex align-items-center justify-content-center">
+          <div class="banner-content text-center">
+              <p>Experience luxury and comfort like never before.</p>
+              <a href="#" class="btn btn-primary">Book Now</a>
+          </div>
+      </div>
+
+        <!--  -->
   
       <!-- ================ welcome section start ================= --> 
       <section class="welcome">
