fest: adssence config

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <meta name="google-adsense-account" content="ca-pub-4277537789895561">
 
 
-
+ <meta name="google-adsense-account" content="ca-pub-4277537789895561">
 
 
   <title>Power Mike Hotels</title>
@@ -85,6 +85,9 @@
   </style>
 </head>
 <body>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4277537789895561"
+     crossorigin="anonymous"></script>
 	<!-- ================ header section start ================= -->	
 	<header class="header_area">
     <div class="header-top">
