--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
       }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6SCRR1SEM0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6SCRR1SEM0');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4277537789895561"
+crossorigin="anonymous"></script>
 <body>
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4277537789895561"
-     crossorigin="anonymous"></script>
+
 	<!-- ================ header section start ================= -->	
 	<header class="header_area">
     <div class="header-top">
