--- a/room.html
+++ b/room.html
@@ -44,6 +44,15 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4277537789895561"
      crossorigin="anonymous"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6SCRR1SEM0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6SCRR1SEM0');
+</script>
 <body>
 	<!-- ================ header section start ================= -->	
 	<header class="header_area">
